@@ -1,0 +1,54 @@
+MemTotal:       16263456 kB
+MemFree:        10019328 kB
+MemAvailable:   12683900 kB
+Buffers:          419920 kB
+Cached:          2838120 kB
+SwapCached:            0 kB
+Active:          1628688 kB
+Inactive:        3604056 kB
+Active(anon):      91240 kB
+Inactive(anon):  2481416 kB
+Active(file):    1537448 kB
+Inactive(file):  1122640 kB
+Unevictable:      418804 kB
+Mlocked:              32 kB
+SwapTotal:             0 kB
+SwapFree:              0 kB
+Dirty:                12 kB
+Writeback:             0 kB
+AnonPages:       2392224 kB
+Mapped:           535488 kB
+Shmem:            597952 kB
+KReclaimable:     346012 kB
+Slab:             418736 kB
+SReclaimable:     346012 kB
+SUnreclaim:        72724 kB
+KernelStack:       14800 kB
+PageTables:        26704 kB
+NFS_Unstable:          0 kB
+Bounce:                0 kB
+WritebackTmp:          0 kB
+CommitLimit:    24908940 kB
+Committed_AS:    6364676 kB
+VmallocTotal:   34359738367 kB
+VmallocUsed:       41844 kB
+VmallocChunk:          0 kB
+Percpu:             3712 kB
+HardwareCorrupted:     0 kB
+AnonHugePages:         0 kB
+ShmemHugePages:        0 kB
+ShmemPmdMapped:        0 kB
+FileHugePages:         0 kB
+FilePmdMapped:         0 kB
+CmaTotal:              0 kB
+CmaFree:               0 kB
+HugePages_Total:       0
+HugePages_Free:        0
+HugePages_Rsvd:        0
+HugePages_Surp:        0
+Hugepagesize:       2048 kB
+Hugetlb:               0 kB
+DirectMap4k:      379852 kB
+DirectMap2M:    15220736 kB
+DirectMap1G:     1048576 kB
+
